調整排版半成品

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-tw">
+<html lang="zh-Hant">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,8 +13,8 @@
         <div class="photo-card photo-card-1"></div>
         <header>
           <div class="logo">
-            <span class="dominic">dominic</span>
             <div class="logo-rect"></div>
+            <span class="dominic">dominic</span>
           </div>
           <div class="menu">
             <div class="menu-btn">
@@ -27,7 +27,7 @@
           <div class="section1-title">
             <div class="title-1">
               <p class="intro">Hey. I'm Solt,</p>
-              <h1>a UI/UX & Brand Designer</h1>
+              <h1>a UI/UX<br />& Brand<br />Designer</h1>
               <p class="desc">
                 Transforming ideas into stunning visuals—UI/UX and brand design
                 that captivates, engages, and delivers results.
@@ -169,8 +169,10 @@
           <div class="portfolio-item">
             <div class="photo-card photo-card-2"></div>
             <div class="portfolio-info">
-              <h5>Soundwave</h5>
-              <p>Designing an Immersive Audio Tech Experience</p>
+              <div class="info-text">
+                <h5>Soundwave</h5>
+                <p>Designing an Immersive Audio Tech Experience</p>
+              </div>
               <span>2025</span>
               <button class="btn-tag">Branding</button>
             </div>
@@ -178,8 +180,10 @@
           <div class="portfolio-item">
             <div class="photo-card photo-card-2"></div>
             <div class="portfolio-info">
-              <h5>LumiGlow</h5>
-              <p>Elevating Beauty with a Luxurious Skincare Identity</p>
+              <div class="info-text">
+                <h5>LumiGlow</h5>
+                <p>Elevating Beauty with a Luxurious Skincare Identity</p>
+              </div>
               <span>2024</span>
               <button class="btn-tag">UI/UX Design</button>
             </div>
@@ -187,8 +191,10 @@
           <div class="portfolio-item">
             <div class="photo-card photo-card-2"></div>
             <div class="portfolio-info">
-              <h5>Véra Mode</h5>
-              <p>Crafting a Chic & Timeless Fashion Brand</p>
+              <div class="info-text">
+                <h5>Véra Mode</h5>
+                <p>Crafting a Chic & Timeless Fashion Brand</p>
+              </div>
               <span>2024</span>
               <button class="btn-tag">Logo</button>
             </div>
@@ -285,23 +291,48 @@
 
     <!-- Section 7 -->
     <section class="section-7">
-      <div class="photo-grid">
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
-        <div class="photo-card photo-card-4"></div>
+      <div class="marquee-wrapper">
+        <div class="marquee-container">
+          <div class="photo-grid move-left">
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+          </div>
+        </div>
+
+        <div class="marquee-container">
+          <div class="photo-grid move-right">
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4"></div>
+          </div>
+        </div>
       </div>
     </section>
 
