把連結按鈕模式設定

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
       <div class="section-1-container">
         <div class="photo-card-1"></div>
         <header>
-          <div class="logo">
+          <a href="" class="logo">
             <div class="logo-rect"></div>
             <span class="dominic">dominic</span>
-          </div>
+          </a>
           <div class="menu">
-            <div class="menu-btn">
+            <button class="menu-btn">
               <span>menu</span>
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -45,7 +45,7 @@
                   stroke-linecap="round"
                 />
               </svg>
-            </div>
+            </button>
           </div>
         </header>
         <div class="section-1-main">
@@ -333,7 +333,7 @@
                 <p>Designing an Immersive Audio Tech Experience</p>
               </div>
               <span>2025</span>
-              <button class="btn-tag">Branding</button>
+              <a href="" class="btn-tag">Branding</a>
             </div>
           </div>
           <div class="portfolio-item">
@@ -344,7 +344,7 @@
                 <p>Elevating Beauty with a Luxurious Skincare Identity</p>
               </div>
               <span>2024</span>
-              <button class="btn-tag">UI/UX Design</button>
+              <a href="" class="btn-tag">UI/UX Design</a>
             </div>
           </div>
           <div class="portfolio-item">
@@ -355,7 +355,7 @@
                 <p>Crafting a Chic & Timeless Fashion Brand</p>
               </div>
               <span>2024</span>
-              <button class="btn-tag">Logo</button>
+              <a href="" class="btn-tag">Logo</a>
             </div>
           </div>
         </div>
@@ -959,23 +959,23 @@
         <div class="footer-right">
           <div class="footer-menu">
             <p>Menu</p>
-            <p>Home</p>
-            <p>Services</p>
-            <p>About</p>
-            <p>Team</p>
-            <p>Pricing</p>
+            <a href="">Home</a>
+            <a href="">Services</a>
+            <a href="">About</a>
+            <a href="">Team</a>
+            <a href="">Pricing</a>
           </div>
           <div class="footer-navigation">
             <p>Navigation</p>
-            <p>Blog</p>
-            <p>Projects</p>
-            <p>Tutorial</p>
-            <p>Documentation</p>
-            <p>Become a Partner</p>
+            <a href="">Blog</a>
+            <a href="">Projects</a>
+            <a href="">Tutorial</a>
+            <a href="">Documentation</a>
+            <a href="">Become a Partner</a>
           </div>
           <div class="footer-social">
             <p>Social</p>
-            <div class="social-link">
+            <a href="" class="social-link">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -996,8 +996,8 @@
                 </defs>
               </svg>
               <span>LinkedIn</span>
-            </div>
-            <div class="social-link">
+            </a>
+            <a href="" class="social-link">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -1026,8 +1026,8 @@
                 </defs>
               </svg>
               <span>Instagram</span>
-            </div>
-            <div class="social-link">
+            </a>
+            <a href="" class="social-link">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -1041,8 +1041,8 @@
                 />
               </svg>
               <span>Twitter</span>
-            </div>
-            <div class="social-link">
+            </a>
+            <a href="" class="social-link">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -1063,8 +1063,8 @@
                 </defs>
               </svg>
               <span>Facebook</span>
-            </div>
-            <div class="social-link">
+            </a>
+            <a href="" class="social-link">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="16"
@@ -1078,7 +1078,7 @@
                 />
               </svg>
               <span>Tiktok</span>
-            </div>
+            </a>
           </div>
         </div>
       </div>
