上傳圖片範例

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <!-- Section 1 -->
     <section class="section-1">
       <div class="section-1-container">
-        <div class="photo-card-1"></div>
+        <div class="photo-card photo-card-1">
+          <img src="./img/designer.jpg" alt="" />
+        </div>
         <header>
           <a href="" class="logo">
             <div class="logo-rect"></div>
@@ -326,7 +328,9 @@
         </div>
         <div class="portfolio-grid">
           <div class="portfolio-item">
-            <div class="photo-card photo-card-2"></div>
+            <div class="photo-card photo-card-2">
+              <img src="./img/portfolio.jpg" alt="" />
+            </div>
             <div class="portfolio-info">
               <div class="info-text">
                 <h5>Soundwave</h5>
@@ -337,7 +341,9 @@
             </div>
           </div>
           <div class="portfolio-item">
-            <div class="photo-card photo-card-2"></div>
+            <div class="photo-card photo-card-2">
+              <img src="./img/portfolio-2.jpg" alt="" />
+            </div>
             <div class="portfolio-info">
               <div class="info-text">
                 <h5>LumiGlow</h5>
@@ -348,7 +354,9 @@
             </div>
           </div>
           <div class="portfolio-item">
-            <div class="photo-card photo-card-2"></div>
+            <div class="photo-card photo-card-2">
+              <img src="./img/portfolio-3.jpg" alt="" />
+            </div>
             <div class="portfolio-info">
               <div class="info-text">
                 <h5>Véra Mode</h5>
@@ -458,7 +466,9 @@
             </div>
           </div>
         </div>
-        <div class="photo-card photo-card-3"></div>
+        <div class="photo-card photo-card-3">
+          <img src="./img/designer-2.jpg" alt="" />
+        </div>
       </div>
     </section>
 
@@ -467,43 +477,107 @@
       <div class="marquee-wrapper">
         <div class="marquee-container">
           <div class="photo-grid move-left">
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/flowers1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/designer.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/food1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/food2.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/japan.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/japan1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/japan2.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/japan3.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/pancake.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/people1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/people2.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/photo1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/photo2.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/photo3.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/sea.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/strawberry.jpg" alt="" />
+            </div>
           </div>
         </div>
 
         <div class="marquee-container">
           <div class="photo-grid move-right">
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
-            <div class="photo-card photo-card-4"></div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/flowers1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/designer.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/food1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/food2.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/japan.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/japan1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/japan2.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/japan3.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/pancake.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/people1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/people2.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/photo1.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/photo2.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/photo3.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/sea.jpg" alt="" />
+            </div>
+            <div class="photo-card photo-card-4">
+              <img src="./img/card/strawberry.jpg" alt="" />
+            </div>
           </div>
         </div>
       </div>
